--- a/app/assets/themes/hybrid_matters/stylesheets/exhibitions.css.scss
+++ b/app/assets/themes/hybrid_matters/stylesheets/exhibitions.css.scss
@@ -23,7 +23,7 @@ header.exhibitions  {
     padding-right: 2.25rem;
   }
   .top-bar {
-    background: url(image_path('/assets/hybrid_matters/images/menu_module_exhibitions.png')) repeat-x;
+    background: asset-url('hybrid_matters/images/menu_module_exhibitions.png') repeat-x;
   }
   nav.top-bar {
     .menu_wrapper, .down_arrow_wrapper {
@@ -36,11 +36,11 @@ header.exhibitions  {
     .down_arrow_wrapper {
       ul.top-bar-menu {
         li {
-          &.active { background: url(image_path('/assets/hybrid_matters/images/selected_down_exhibitions.png')) no-repeat center center; }
+          &.active { background: asset-url('hybrid_matters/images/selected_down_exhibitions.png') no-repeat center center; }
         }
         .together {
           &.active {
-            background: url(image_path('/assets/hybrid_matters/images/selected_down_exhibitions.png')) no-repeat center center; 
+            background: asset-url('hybrid_matters/images/selected_down_exhibitions.png') no-repeat center center; 
           }
         }
       }
