--- a/app/assets/themes/hybrid_matters/stylesheets/application.css.scss
+++ b/app/assets/themes/hybrid_matters/stylesheets/application.css.scss
@@ -106,13 +106,13 @@ header {
     }
   }
   &.type1 {
-    background: url(image_path('/assets/hybrid_matters/images/top_image1.jpg')) no-repeat top center;
+    background: asset-url('hybrid_matters/images/top_image1.jpg') no-repeat top center;
   }
   &.type2 {
-    background: url(image_path('/assets/hybrid_matters/images/top_image2.jpg')) no-repeat top center;
+    background: asset-url('hybrid_matters/images/top_image2.jpg') no-repeat top center;
   }
   &.type3 {
-    background: url(image_path('/assets/hybrid_matters/images/top_image3.jpg')) no-repeat top center;
+    background: asset-url('hybrid_matters/images/top_image3.jpg') no-repeat top center;
   }
   background-color: $pastel-blue;
 //  background-size: cover;
@@ -127,7 +127,7 @@ header {
   }
   
   .top-bar {
-    background: url(image_path('/assets/hybrid_matters/images/menu_module.png')) repeat-x;
+    background: asset-url('hybrid_matters/images/menu_module.png') repeat-x;
     z-index: 100;
     margin-top: -37px;
     height: 75px;
@@ -141,13 +141,13 @@ header {
             }
           }
           &.active {
-            background: url(image_path('/assets/hybrid_matters/images/selected_down.png')) no-repeat center center; 
+            background: asset-url('hybrid_matters/images/selected_down.png') no-repeat center center; 
           }
         }
         li {
           font-family: 'Roboto';
           span { font-size: 1.125rem; }
-          &.active { background: url(image_path('/assets/hybrid_matters/images/selected_down.png')) no-repeat center center; }
+          &.active { background: asset-url('hybrid_matters/images/selected_down.png') no-repeat center center; }
         }
       }
     }
