--- a/app/views/themes/hybrid_matters/layouts/field_notes.html.haml
+++ b/app/views/themes/hybrid_matters/layouts/field_notes.html.haml
@@ -3,7 +3,7 @@
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}/
-    = display_meta_tags :site => 'Field_Notes', og: {image: "http://#{request.host}#{asset_path('hybrid_matters/images/hm_logo.png')}" }
+    = display_meta_tags :site => 'Field_Notes', og: {image: "https://#{request.host}#{asset_path('hybrid_matters/images/hm_logo.png')}" }
     = stylesheet_link_tag 'hybrid_matters/stylesheets/application', media: 'all'
     = javascript_include_tag 'hybrid_matters/javascripts/application', 'data-turbolinks-track' => true 
     - if controller.controller_name == 'partners'
@@ -58,9 +58,9 @@
       
             .menu_wrapper
               .social.hide-for-small-only
-                = link_to image_tag('hybrid_matters/images/icon_fb.png', onmouseover: "this.src='#{image_path('/assets/hybrid_matters/images/icon_fb_hover.png')}'", onmouseout: "this.src='#{asset_path('hybrid_matters/images/icon_fb.png')}'"), 'https://www.facebook.com/groups/437255773056631/', target: :_blank, class: :facebook_link
-                = link_to image_tag('/assets/hybrid_matters/images/icon_twitter.png', onmouseover: "this.src='#{image_path('/assets/hybrid_matters/images/icon_twitter_hover.png')}'", onmouseout: "this.src='#{image_path('/assets/hybrid_matters/images/icon_twitter.png')}'"), 'http://twitter.com/hybridmatters', target: :_blank, class: :twitter_link
-                = link_to image_tag('/assets/hybrid_matters/images/icon_post.png', onmouseover: "this.src='#{image_path('/assets/hybrid_matters/images/icon_post_hover.png')}'", onmouseout: "this.src='#{image_path('/assets/hybrid_matters/images/icon_post.png')}'"), 'mailto:info@bioartsociety.fi', class: :maillink
+                = link_to image_tag('hybrid_matters/images/icon_fb.png', onmouseover: "this.src='#{asset_path('hybrid_matters/images/icon_fb_hover.png')}'", onmouseout: "this.src='#{asset_path('hybrid_matters/images/icon_fb.png')}'"), 'https://www.facebook.com/groups/437255773056631/', target: :_blank, class: :facebook_link
+                = link_to image_tag('/assets/hybrid_matters/images/icon_twitter.png', onmouseover: "this.src='#{asset_path('hybrid_matters/images/icon_twitter_hover.png')}'", onmouseout: "this.src='#{asset_path('hybrid_matters/images/icon_twitter.png')}'"), 'http://twitter.com/hybridmatters', target: :_blank, class: :twitter_link
+                = link_to image_tag('/assets/hybrid_matters/images/icon_post.png', onmouseover: "this.src='#{asset_path('hybrid_matters/images/icon_post_hover.png')}'", onmouseout: "this.src='#{asset_path('hybrid_matters/images/icon_post.png')}'"), 'mailto:info@bioartsociety.fi', class: :maillink
               .rest
                 .row.show-for-small-only
                   = render partial: 'layouts/mobile_dropdown'
