--- a/app/views/themes/bioart/home/_ars_bioarctica.html.haml
+++ b/app/views/themes/bioart/home/_ars_bioarctica.html.haml
@@ -1,4 +1,4 @@
-.ars_bioarctica_front{style: "background: url(#{@ars.background.url}) repeat;"}
+.ars_bioarctica_front{style: "background: url(#{@ars.background.url}) repeat; background-size: cover;"}
   .row
     .small-10.small-centered.medium-12.columns.section_title
       = link_to '/projects/ars-bioarctica' do
