--- a/app/views/themes/bioart/layouts/application.html.haml
+++ b/app/views/themes/bioart/layouts/application.html.haml
@@ -24,7 +24,7 @@
             background-color: #{@project.custom_heading_background_colour} !important;
           }
           .project_detail ul.project_menu li a.active {
-            background: #{@project.custom_heading_background_colour}  url(/assets/bioart/images/layout/menubar_arrow.png)  0.4em no-repeat !important;
+            background: #{@project.custom_heading_background_colour}  #{asset_url('bioart/images/layout/menubar_arrow.png')}  0.4em no-repeat !important;
           }
           .project_detail .text p a, .project_detail .grid .chunked p a, .project_detail .text .excerpt a {
             color: #{@project.custom_heading_background_colour} !important;
@@ -54,7 +54,7 @@
   
         .row.search_field#search_field_container
           = form_tag '/search' do
-            = text_field_tag :searchterm, params[:searchterm], placeholder: 'Search', style: @project.nil? ? '' : "background: url(/assets/bioart/images/layout/mag_glass.png) no-repeat 2px center  #{@project.custom_background_colour.blank? ? '#66ffcc' : @project.custom_background_colour};"
+            = text_field_tag :searchterm, params[:searchterm], placeholder: 'Search', style: @project.nil? ? '' : "background: #{asset_url('bioart/images/layout/mag_glass.png')} no-repeat 2px center  #{@project.custom_background_colour.blank? ? '#66ffcc' : @project.custom_background_colour};"
         .row
           - if user_signed_in?
             .login_options
@@ -79,7 +79,7 @@
                 %li= link_to 'About', '/about'
                 %li.search.hide-for-small-only
                   = form_tag '/search' do
-                    = text_field_tag :searchterm, params[:searchterm], placeholder: 'Search', style: @project.nil? ? '' : "background: url(/assets/bioart/images/layout/mag_glass.png) no-repeat 2px center  #{@project.custom_background_colour.blank? ? '#66ffcc' : @project.custom_background_colour};"
+                    = text_field_tag :searchterm, params[:searchterm], placeholder: 'Search', style: @project.nil? ? '' : "background: #{asset_url('bioart/images/layout/mag_glass.png')} no-repeat 2px center  #{@project.custom_background_colour.blank? ? '#66ffcc' : @project.custom_background_colour};"
                 -#%li= link_to 'Contact', page_path('contact')
     - unless flash.empty?
       #flash
