--- a/app/views/themes/bioart/posts/show.html.haml
+++ b/app/views/themes/bioart/posts/show.html.haml
@@ -17,7 +17,7 @@
           .post_image
             - if @post.photos.size == 1
 
-              = image_tag @post.photos.first.image.url.gsub('development', 'production')
+              = image_tag @post.photos.first.image.url
             - else
               .image_carousel{style: @post.photos.size > 1 ? "margin-bottom: 135px" : "margin-bottom: 1rem"}
 
