new address in footer

--- a/app/views/themes/bioart/layouts/_footer.html.haml
+++ b/app/views/themes/bioart/layouts/_footer.html.haml
@@ -4,11 +4,11 @@
       %p
         %strong Office and postal address
       %p
-        Suomen Biotaiteen Seura ry / Finnish Bioart Society
+        SOLU / Bioart Society
         %br/
-        Hilda Flodinin aukio 2a 2
+        Luotsikatu 13
         %br/
-        00300 Helsinki Finland
+        00160 Helsinki Finland
         %br/
         info@bioartsociety.fi
   .small-6.columns.medium-3 &nbsp;
