--- a/app/assets/themes/bioart/stylesheets/base.css.scss
+++ b/app/assets/themes/bioart/stylesheets/base.css.scss
@@ -60,6 +60,19 @@ header {
         line-height: 1em;
         font-weight: 600;
         color: black;
+        img { 
+          float: left;
+          margin-left: 10px;
+        }
+        .title {
+          float: left;
+          padding-top: 60px;
+          font-family: $rubik;
+          font-size: 2.5rem;
+          line-height: 1em;
+          font-weight: 600;
+          color: black;
+        }
       }
     }
     ul.menu {
