--- a/app/views/themes/bioart/layouts/_footer.html.haml
+++ b/app/views/themes/bioart/layouts/_footer.html.haml
@@ -16,9 +16,9 @@
 
     .icons.float-right
       -#.email= link_to image_tag(theme_image_path('layout/email_icon.png')), '#'
-      .fb= link_to image_tag(theme_image_path('layout/fb_icon.png')), 'https://www.facebook.com/groups/bioartsociety/', target: :_blank
-      .twitter= link_to image_tag(theme_image_path('layout/twitter_icon.png')), 'https://twitter.com/bioartsociety', target: :_blank
-      .instagram= link_to image_tag(theme_image_path('layout/instagram_icon.png')), 'https://www.instagram.com/bioartsociety/', target: :_blank
-      .rss= link_to image_tag(theme_image_path('layout/rss_icon.png')), '/feed', target: :_blank
+      .fb= link_to image_tag(asset_path('assets/bioart/images/layout/fb_icon.png')), 'https://www.facebook.com/groups/bioartsociety/', target: :_blank
+      .twitter= link_to image_tag(asset_path('assets/bioart/images/layout/twitter_icon.png')), 'https://twitter.com/bioartsociety', target: :_blank
+      .instagram= link_to image_tag(asset_path('assets/bioart/images/layout/instagram_icon.png')), 'https://www.instagram.com/bioartsociety/', target: :_blank
+      .rss= link_to image_tag(asset_path('assets/bioart/images/layout/rss_icon.png')), '/feed', target: :_blank
     %br/
     .privacy= link_to 'Privacy policy', page_path('gdpr-policy')
