--- a/app/assets/themes/bioart/stylesheets/posts.css.scss
+++ b/app/assets/themes/bioart/stylesheets/posts.css.scss
@@ -148,6 +148,7 @@
       }
     }
     .navigation {
+      clear: both;
       padding: 1.5rem 0 2.5rem 0;
       .side_link {
         float: left;
