--- a/app/views/themes/bioart/layouts/application.html.haml
+++ b/app/views/themes/bioart/layouts/application.html.haml
@@ -62,8 +62,8 @@
               = link_to fa_icon('sign-out'), destroy_user_session_path, :method => :delete
           = link_to '/' do
             .logo.medium-3.columns.small-12
-              BIOART SOCIETY
-              -# = image_tag theme_image_path('solu_logo.png'), width: 90
+              -# BIOART SOCIETY
+              = image_tag theme_image_path('solu_bioart.png')
 
             .search_icon.show-for-small-only
               = link_to fa_icon('search'), '#', onclick: '$("#search_field_container").slideToggle();$(".search_icon").fadeOut();'
