--- a/app/views/themes/bioart/calls/show.html.haml
+++ b/app/views/themes/bioart/calls/show.html.haml
@@ -1,19 +1,20 @@
 .opencall_detail{class: @call.slug}
   .row
     .small-12.columns
-      
+
       .text{class: [@call.photos.empty? ? false : :has_photos]}
         .red= @call.name
         - unless @call.end_at.blank?
           .deadline
             Application deadline
-            = l @call.end_at, format: :long
+            = l @call.end_at.end_of_day.in_time_zone('Helsinki').utc, format: :long
+            %em (Finnish time)
         - unless @call.photos.empty?
           - if @call.photos.size == 1
             .image= image_tag @call.photos.first.image.url(:standard)
           - else
             .image_carousel{style: @call.photos.size > 1 ? "margin-bottom: 135px" : "margin-bottom: 1rem"}
-          
+
               - @call.photos.each do |photo|
                 .slide[photo]
                   = image_tag photo.image.url(:standard)
@@ -23,7 +24,7 @@
                 $('.image_carousel').slick({infinite: true,
                   arrows: true,
 
-      
+
                   adaptiveHeight: false,
                   prevArrow: '<button type="button" data-role="none" class="slick-prev slick-arrow" aria-label="Previous" role="button" style="display: inline-block;"></button>',
                   nextArrow: '<button type="button" data-role="none" class="slick-next slick-arrow" aria-label="Next" role="button" style="display: inline-block;"></button>',
@@ -62,15 +63,15 @@
               .row
                 .medium-2.small-offset-1.small-4.columns.form_label.text-left.left_form= "Address"
                 .small-7.medium-4.end.columns= f.input :address, input_html: {required: '' }, label: false
-                
+
               .row
                 .medium-2.small-offset-1.small-4.columns.form_label.text-left.left_form= "Date of birth"
                 .small-7.medium-4.end.columns= f.input :date_of_birth, input_html: {required: '' }, label: false
-                
+
               .row
                 .medium-2.small-offset-1.small-4.columns.form_label.text-left.left_form= "Nationality"
                 .small-7.medium-4.end.columns= f.input :nationality, input_html: {required: '' }, label: false
-                
+
               .row
                 .medium-2.small-offset-1.small-4.columns.form_label.text-left.left_form= "Email address"
                 .small-7.medium-4.end.columns= f.input :email, input_html: {required: '' }, label: false
@@ -101,8 +102,8 @@
                         .selected_file
                     - elsif ff.object.question.question_type.to_sym == :boolean
                       = raw ff.input :answer_boolean, label: false,  as: :radio, collection: [[ 'Yes <img />'.html_safe, true], ['No <img />'.html_safe, false]]
-                      
-                      
+
+
                     - elsif ff.object.question.question_type.to_sym == :group_select
                       = ff.input :answer_text, as: :select, collection: @call.symposium.groups, label: false, input_html: { required: ff.object.question.required == true ? '' : false }
                     - else
