--- a/app/views/themes/bioart/home/_whatsnew.html.haml
+++ b/app/views/themes/bioart/home/_whatsnew.html.haml
@@ -16,13 +16,17 @@
               = "#{post.node.to_hashtag}"
         .post_content
           .title= post.title
-          .excerpt= truncate_html(sanitize(post.body, tags: %w{b strong bold i italic em u underline br}), length: 150)
-      
+          .excerpt
+            - if post.short_abstract
+              = sanitize(post.short_abstract, tags: %w{b strong bold i italic em u underline br})
+            - else
+              = truncate_html(sanitize(post.body, tags: %w{b strong bold i italic em u underline br}), length: 150)
+
 = content_for :jquery do
   :plain
     $('.post_carousel').slick({infinite: true,
         arrows: true,
-        
+
         adaptiveHeight: false,
         prevArrow: '<button type="button" data-role="none" class="slick-prev slick-arrow" aria-label="Previous" role="button" style="display: inline-block;"></button>',
         nextArrow: '<button type="button" data-role="none" class="slick-next slick-arrow" aria-label="Next" role="button" style="display: inline-block;"></button>',
@@ -52,5 +56,4 @@
           }
         ]
       });;
-    
-    
+
