--- a/app/views/themes/bioart/posts/index.html.haml
+++ b/app/views/themes/bioart/posts/index.html.haml
@@ -16,19 +16,19 @@
       .small-10.small-centered.medium-12.columns.section_title
         %h1.project_title News
         - if @category
-          %h3.project_subtitle= @category.name  
+          %h3.project_subtitle= @category.name
   - else
     .row
       .small-10.small-centered.medium-12.columns.section_title
         News
-  .row.small-up-1.medium-up-2.large-up-3#results= render partial: 'posts/postspage'
- 
+  .row.small-up-1.medium-up-2.large-up-3#results{:'data-equalizer' => '', :'data-equalize-on' => 'medium'}= render partial: 'posts/postspage'
+
 - if @category
-  
+
 - elsif @project
   = content_for :jquery do
     :plain
-      $('#results').pageless({ 
+      $('#results').pageless({
                               url: '/projects/#{@project.slug}/posts/'
                              , loaderMsg: 'Loading more posts....'
                              });
@@ -36,7 +36,7 @@
 - else
   = content_for :jquery do
     :plain
-      $('#results').pageless({ 
+      $('#results').pageless({
                              url: '/posts/'
                              , loaderMsg: 'Loading more posts....'
                              });
