--- a/app/views/themes/bioart/projects/show.html.haml
+++ b/app/views/themes/bioart/projects/show.html.haml
@@ -31,13 +31,13 @@
       - unless @project.posts.empty?
         .blog_container
           .red= link_to 'News', project_posts_path(@project)
-          .row.small-up-1.medium-up-2.large-up-3.xxlarge-up-4.post_carousel
+          .row.small-up-1.medium-up-2.large-up-3.xxlarge-up-4.post_carousel{:'data-equalizer' => '', :'data-equalize-on' => 'medium'}
             - @project.posts.published.order(published_at: :desc).take(12).each do |post|
               = link_to post, class: [:post, :columns] do
                 .post_image{style: "background: url(#{post.photos.empty? ? theme_image_path('placeholder.png') : post.photos.first.image.url(:box).gsub('development', 'production')}) center/cover no-repeat"}
                   -#.hashtag
                   -#  = "##{post.node.name}"
-                .post_content
+                .post_content{:'data-equalizer-watch' => ''}
                   .title= truncate_html(post.title, length: 40)
                   .excerpt
                     - if post.short_abstract
@@ -87,10 +87,10 @@
               });;
       - @project.pages.roots.each do |page|
         - next if page.is_project_overview == true
-        .text_box{class: page.children.empty? ? false : :has_children}
+        .text_box{class: page.children.empty? ? false : :has_children, :'data-equalizer' => '', :'data-equalize-on' => 'medium'}
           .red= link_to  page.title, project_page_path(@project, page)
           - if page.children.empty?
-            .body
+            .body{:'data-equalizer-watch' => ''}
               - if !page.excerpt.blank?
                 = raw sanitize(page.excerpt, tags: %w{b strong bold i italic em u underline br})
               - else
@@ -103,11 +103,11 @@
             - if page.image?
               .image= image_tag page.image.url
           - else
-            .row.small-up-1.medium-up-2.large-up-3.page_children
+            .row.small-up-1.medium-up-2.large-up-3.page_children{:'data-equalizer' => '', :'data-equalize-on' => 'medium'}
               - page.children.each do |child|
                 = link_to project_page_path(@project, child), class: [:page, :columns] do
                   .page_image{style: "background: url(#{child.image? ?  child.image.url(:box).gsub(/development/, 'production') : @project.image.url }) center/cover no-repeat"}
-                  .page_content
+                  .page_content{:'data-equalizer-watch' => ''}
                     .title= child.title
                     .excerpt
                       - if child.excerpt.blank?
