--- a/app/views/themes/bioart/residencies/show.html.haml
+++ b/app/views/themes/bioart/residencies/show.html.haml
@@ -61,13 +61,13 @@
                 = raw stay.residency_description
           - unless stay.posts.published.empty?
             .residency_blog_index
-              .row.small-up-1.medium-up-2.large-up-3.xxlarge-up-3.post_carousel
+              .row.small-up-1.medium-up-2.large-up-3.xxlarge-up-3.post_carousel{:'data-equalizer' => '', :'data-equalize-on' => 'medium'}
                 - stay.posts.published.order(published_at: :desc).take(12).each do |post|
                   = link_to post, class: [:post, :columns] do
                     .post_image{style: "background: url(#{post.photos.empty? ? theme_image_path('placeholder.png') : post.photos.first.image.url(:box).gsub('development', 'production')}) center/cover no-repeat"}
                       -#.hashtag
                       -#  = "##{post.node.name}"
-                    .post_content
+                    .post_content{:'data-equalizer-watch' => ''}
                       .title= truncate_html(post.title, length: 40)
                       .excerpt
                         - if post.short_abstract
